01_Deployment.yaml
---
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-example-dpl
  annotations:
    kubernetes.io/change-cause: 'changed to new image'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 'nginx-example'
      vers: '1'
  template:
    metadata:
      labels:
        app: 'nginx-example'
        vers: '1'
    spec:
      containers:
        - name: nginx-example
          image: zahlenhelfer/k8s-nginx-example:latest
          ports:
            - containerPort: 80
